@@ -15,8 +15,30 @@
 #include <kurl.h>             //stack alloc
 #include <qmap.h>
 
+#include "tagselectdialog.h"
+
 class PlaylistItem;
 
+class TagSelect : public TagSelectDialog
+{
+    Q_OBJECT
+    
+    signals:
+        void sigSelectionMade( KTRMResult );
+        
+    public:
+        TagSelect( KTRMResultList results, QWidget* parent = 0);
+     
+    private:
+        KTRMResultList results;
+        
+    private slots:
+        void accept();
+        void reject();
+
+    
+                   
+};
 
 class TagDialog : public TagDialogBase
 {
@@ -26,7 +48,8 @@ class TagDialog : public TagDialogBase
         TagDialog( const KURL& url, QWidget* parent = 0 );
         TagDialog( const KURL::List list, QWidget* parent = 0 );
         TagDialog( const MetaBundle& mb, PlaylistItem* item, QWidget* parent = 0 );
-
+        friend class TagSelect;
+        
     private slots:
         void accept();
         void cancelPressed();
@@ -37,7 +60,8 @@ class TagDialog : public TagDialogBase
 
         void musicbrainzQuery();
         void queryDone( KTRMResultList results );
-
+        void fillSelected( KTRMResult selected );
+        
     private:
         void init();
         void readTags();
@@ -57,6 +81,7 @@ class TagDialog : public TagDialogBase
         QString m_currentCover;
         QString m_mbTrack;
 };
+
 
 
 #endif /*AMAROK_TAGDIALOG_H*/
